# world

./: .gitignore  A Nickz PRoduction.fla  An encounter with a ghost.fla  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.actions.yml  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  static.sh  static_upload.sh
map/: Dockerfile  (+7 more)
src/: bower.json  gulpfile.js  main.py  package-lock.json  package.json  setup.cfg  wait.py
src/app/: __init__.py  config.py  encryption.py  forms.py  general.py  models.py  privacy.html  routes.py  static  wait.py
src/app/auth/: __init__.py  forms.py  models.py  routes.py
src/app/errors/: __init__.py  handlers.py
src/app/kumia/: 2025-09-11_meta.py  2025_09_11.html  __init__.py  accumulation.html  accumulation_meta.py  career-day_meta.py  career_day.html  career_day_meta.py  d20141228.html  d20141228_meta.py  floating-rocks.html  floating-rocks_meta.py  floating_rocks.html  ideas.html  ideas_meta.py  inhibition.html  inhibition_meta.py  keep-notes.html  keep_notes.html  keep_notes_meta.py  one-percent.html  one-percent_meta.py  one_percent.html  one_percent_meta.py  posts.py  quality-v-quantity_meta.py  quality_v_quantity.html  quality_v_quantity_meta.py  resume.py  routes.py  sanatan-dharma_meta.py  sanatan_dharma.html  spiritual.html  spiritual_meta.py  spiritualtech-collab.html  spiritualtech-collab_meta.py  vedic-death.html  (+7 more)
src/tests/: conftest.py  test_auth.py  test_nlp_app.py  test_routes.py  test_startup.py  test_syntax.py
src/utilities/: tojson.py
(+221 files in other folders)
