[metadata]
name = nlp-web
version = 0.0.1
url = https://github.com/nickumia/nlp-web
license = GPL v3
maintainer = nickumia
maintainer_email = nickumia@kamutiv.com
description = A presentation of NLP concepts over the web.
long_description = file: README.md
long_description_content_type = text/md

[options]
packages = find:
include_package_data = true
install_requires =
  Flask
	flask-wtf
	flask-login
	email-validator
	flask-moment
	flask-sqlalchemy
	psycopg2
	pyjwt
	elasticsearch
	wtforms>=3.0.0a1

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    app
